--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=pranitaj299@gmail.com
-spring.mail.password=Pranita_jadhav@299
+spring.mail.password=${password}
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
