Added: interceptor for fundoo app, applied:vallidation for entity class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #Mail Service 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pranitaj299@gmail.com
+spring.mail.username=${username}
 spring.mail.password=${password}
 
 spring.mail.properties.mail.smtp.auth=true
